<resources>
  <string name="lang">eng</string>
  <string name="app_name">EOL Eclair Mobile Testnet</string>
  <string name="notification_channel_closing_ln_channel_name">Channel Closing</string>
  <string name="notification_channel_closing_ln_channel_desc">Notification displayed when a channel is closing, be it cooperative or not.</string>
  <string name="notification_channel_restart_name">Background watcher</string>
  <string name="notification_channel_restart_desc">Alerts you when you need to start the app. Should be high priority.</string>
  <string name="notification_channel_received_ln_payment_name">Received Lightning Payment</string>
  <string name="notification_channel_received_ln_payment_desc">This notification shows up when you receive a payment over Lightning.</string>
  <string name="walletinfo_name">Wallet Info</string>
  <string name="about_name">About</string>
  <string name="lnpayment_name">Lightning Payment Details</string>
  <string name="btcpayment_name">Transaction Details</string>
  <string name="channeldetails_name">Channel Details</string>
  <string name="channelrawdata_name">Channel Raw Data</string>
  <string name="home_toast_openchannel_failed">Failed to open channel: </string>
  <string name="home_channel_paste_uri">Paste a node URI</string>
  <string name="home_channel_scan_uri">Scan a node URI</string>
  <string name="home_channel_random">Random node</string>
  <string name="home_channel_acinq">ACINQ node</string>
  <string name="home_sync_progress">%1$d%%</string>
  <string name="home_sync_progress_desc">Updating the lightning network map</string>
  <string name="home_sync_progress_about"><![CDATA[
  The wallet is currently downloading an up-to-date map of the Lightning Network. Lightning payments might fail until synchronization is complete.
  <br><br>
  Note that this wallet computes payments routes on-device to protect your privacy.
  ]]></string>
  <string name="home_no_backup">NO BACKUP</string>
  <string name="home_backup_disabled_icon_desc">Channels backup is disabled!</string>
  <string name="home_electrum_establishing">Establishing connection with a default electrum server…</string>
  <string name="home_electrum_establishing_custom">Establishing connection with %1$s…</string>
  <string name="home_electrum_syncing">Syncing from %1$s…</string>
  <string name="home_warning_runnable_background_title">Background service</string>
  <string name="home_warning_runnable_background_message"><![CDATA[
  It seems that Eclair Mobile has not been able to run in background lately. Make sure that your phone does not aggressively optimize this application.
  <br /><br />
  Some vendors like <b>Nokia</b>, <b>Xiaomi</b>, <b>Huawei</b> or <b>Samsung</b> run overzealous custom battery savers preventing non white-listed apps to run in background.
  <br /><br />
  You can check <a href="https://github.com/ACINQ/eclair-mobile/wiki/FAQ">our FAQ</a> for more information.
  ]]></string>
  <string name="payments_title">Payments</string>
  <string name="payments_sunset_notice">This app is being retired. Tap for details.</string>
  <string name="payments_empty">No transactions yet…</string>
  <string name="localchannels_title">Channels</string>
  <string name="localchannels_active_empty">No active channels yet…\nTo open a new channel click on the (+) button.</string>
  <string name="localchannels_closed_empty">No closed channels yet…</string>
  <string name="localchannels_show_inactive">Show closed channels</string>
  <string name="localchannels_hide_inactive">Hide closed channels</string>
  <string name="localchannels_total_sendable">Total can send</string>
  <string name="localchannels_total_receivable">Total can receive</string>
  <string name="receive_title">Receive</string>
  <string name="home_intro_welcome">Welcome!</string>
  <string name="home_intro_welcome_sub">Tap anywhere to continue this short tour.</string>
  <string name="home_intro_receive">Swipe left</string>
  <string name="home_intro_receive_sub">To display your address and\nreceive funds.</string>
  <string name="home_intro_openchannel">Swipe right</string>
  <string name="home_intro_openchannel_sub">To open a Lightning Network channel.</string>
  <string name="home_intro_openchannel_patience">Please be patient.</string>
  <string name="home_intro_openchannel_patience_sub">Opening a channel takes 2 confirmations.</string>
  <string name="home_intro_sendpayment">Click here to send a payment</string>
  <string name="home_intro_sendpayment_sub">Make sure to have 1 channel\nin NORMAL state</string>
  <string name="startup_update_wallet_title">Update available</string>
  <string name="startup_update_wallet_message">An new version of Eclair Mobile has been released.\n\nPlease keep this app up to date to enjoy the latest features, bug fixes, and improvements!</string>
  <string name="start_enter_password">Enter PIN to unlock</string>
  <string name="start_error_restart">Restart</string>
  <string name="start_error_share_logs">Share logs…</string>
  <string name="start_error_faq_link"><![CDATA[<a href="https://github.com/ACINQ/eclair-mobile/wiki/FAQ">Checkout our FAQ</a>]]></string>
  <string name="start_error_unreadable_seed">Seed is not readable; eclair can not start.</string>
  <string name="start_error_connectivity">Your device is not connected to the internet, or has a very slow connection. Please check your network settings.</string>
  <string name="start_error_timeout">Eclair could not start within a reasonable time frame. Please check your network settings.</string>
  <string name="start_error_wrong_password">Wrong PIN.</string>
  <string name="start_error_biometric">Authentication has failed, please try again or use the PIN code dialog.</string>
  <string name="start_error_improper">App did not initialize properly, restarting…</string>
  <string name="start_error_generic">There was an error when starting the wallet. If this error persists, you can check the application\'s logs and contact our support.</string>
  <string name="start_error_datadir_unreadable">Datadir is not readable.</string>
  <string name="start_error_datadir_not_directory">Datadir is not a directory.</string>
  <string name="start_error_unencrypted">Your seed is not encrypted. Please enter a PIN.</string>
  <string name="start_log_init">initializing system…</string>
  <string name="start_log_setting_up">setting up eclair…</string>
  <string name="start_log_starting_core">starting core…</string>
  <string name="start_log_done">done</string>
  <string name="start_log_reading_seed">reading seed…</string>
  <string name="start_log_seed_ok">seed loaded…</string>
  <string name="createwallet_init_title">Seed Recovery Phrase</string>
  <string name="createwallet_init_instructions"><![CDATA[
    This phrase stores the information about your wallet. It is the <u><b>only way to recover your funds</b></u> if you lose your phone.
    <br /><br />
    Please backup this phrase in a secure location (not on this phone).
  ]]></string>
  <string name="createwallet_single_word_display"><![CDATA[<small>#%1$d</small> <b>%2$s</b>]]></string>
  <string name="createwallet_check_skip">Skip this step</string>
  <string name="createwallet_check_input_hint">Word #%1$d</string>
  <string name="createwallet_check_title">Backup verification</string>
  <string name="createwallet_check_instructions">What are the #%1$d, #%2$d and #%3$d words of the recovery phrase?</string>
  <string name="createwallet_check_failed">At least one word does not match.</string>
  <string name="createwallet_error_write_seed">The seed could not be saved on disk.\n\nCause: %1$s</string>
  <string name="createwallet_invalid_seed">Error in wallet creation, aborting…</string>
  <string name="createwallet_error_seed_generation">Could not generate the recovery phrase…</string>
  <string name="createwallet_error_generic">Wallet creation error, aborting…</string>
  <string name="createwallet_encryption_title">Seed Encryption</string>
  <string name="createwallet_encryption_instructions">The seed must now be encrypted with a 6 digits PIN.</string>
  <string name="createwallet_encryption_button">Set PIN</string>
  <string name="createwallet_please_wait">Please wait…</string>
  <string name="createwallet_success">Your wallet has been successfully created!</string>
  <string name="wallet_passphrase_title">Passphrase</string>
  <string name="wallet_passphrase_instructions">Eclair supports passphrase. If you don\'t know what this is, or if your wallet does not have a passphrase, leave this field blank, and click Next.</string>
  <string name="wallet_passphrase_confirm_title">Confirm Passphrase</string>
  <string name="wallet_passphrase_input_hint">Passphrase…</string>
  <string name="wallet_passphrase_confirm_input_hint">Confirm Passphrase…</string>
  <string name="wallet_passphrase_error_do_not_match">Passphrases do not match</string>
  <string name="importwallet_init_title">Restore Wallet Seed</string>
  <string name="importwallet_init_instructions">Type in the recovery phrase of your wallet. It should be a list of 12 or 24 words.</string>
  <string name="importwallet_mnemonics_label">Use the keyboard below to type the seed:</string>
  <string name="importwallet_next_button">Next</string>
  <string name="importwallet_seed_error">This seed is invalid:\n%1$s</string>
  <string name="importwallet_seed_empty">Please enter the recovery phrase of your wallet using the virtual keyboard.</string>
  <string name="importwallet_error">Could not import this seed/passphrase</string>
  <string name="importwallet_success">Seed has been restored and encrypted.</string>
  <string name="restorechannels_title">Restore Lightning channels</string>
  <string name="restorechannels_explanations">If you already used Eclair Mobile with this seed, you may have remaining active channels that could be restored.</string>
  <string name="restorechannels_hash">[hash]: %1$s</string>
  <string name="restorechannels_check_button">Scan for backup</string>
  <string name="restorechannels_browse_button">Find backup manually</string>
  <string name="restorechannels_confirm_button">Restore this backup</string>
  <string name="restorechannels_try_again_button">Try again</string>
  <string name="restorechannels_requesting_access">Granting access…</string>
  <string name="unknown">N/A</string>
  <string name="btn_next">Next</string>
  <string name="open_in_explorer">Open transaction in explorer…</string>
  <string name="transactiondetails_fees_label">Mining Fees</string>
  <string name="transactiondetails_txid_label">Transaction Id</string>
  <string name="transactiondetails_date_label">Local timestamp</string>
  <string name="transactiondetails_confs_label">Confirmations</string>
  <string name="transactiondetails_confs_type_label">Confidence type</string>
  <string name="transactiondetails_rebroadcast">Rebroadcast transaction</string>
  <string name="paymentdetails_technicals_title">Technical Information</string>
  <string name="paymentdetails_amount_fiat">≈ %1$s</string>
  <string name="prefs_cat_lightning">Lightning</string>
  <string name="prefs_lightning_max_fee">Lightning Fee Protection</string>
  <string name="prefs_lightning_max_fee_desc">Prevent making a Lightning payment if the fee would be too high. Limit is set to 3% (with a tolerance if fee is smaller than 21 satoshis to allow tiny payments).</string>
  <string name="prefs_lightning_enable_inbound">Enable receive over Lightning</string>
  <string name="prefs_lightning_enable_inbound_desc">If this feature is enabled, you need to make sure that your phone doesn\'t stay without internet connectivity for more than two weeks straight.</string>
  <string name="prefs_payment_request_default_description">Payment request default description</string>
  <string name="prefs_payment_request_default_description_summary">Default description for your lightning payment requests.</string>
  <string name="prefs_payment_request_expiry">Payment request expiry</string>
</resources>