<!--
  ~ Copyright 2018 ACINQ SAS
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory android:title="@string/prefs_cat_lightning">

    <SwitchPreference
      android:defaultValue="true"
      android:key="cap_lightning_fees"
      android:summary="@string/prefs_lightning_max_fee_desc"
      android:title="@string/prefs_lightning_max_fee" />

    <SwitchPreference
      android:defaultValue="false"
      android:key="enable_lightning_inbound_payments"
      android:summary="@string/prefs_lightning_enable_inbound_desc"
      android:title="@string/prefs_lightning_enable_inbound" />

  </PreferenceCategory>

  <PreferenceCategory android:title="Payment Request parameters">
    <EditTextPreference
      android:dialogTitle="@string/prefs_payment_request_default_description"
      android:key="payment_request_default_description"
      android:summary="@string/prefs_payment_request_default_description_summary"
      android:title="@string/prefs_payment_request_default_description" />

    <ListPreference
      android:defaultValue="3600"
      android:dialogTitle="@string/prefs_payment_request_expiry"
      android:entries="@array/lightning_pr_expiry_labels"
      android:entryValues="@array/lightning_pr_expiry_values"
      android:key="payment_request_expiry"
      android:summary="%s"
      android:title="@string/prefs_payment_request_expiry" />
  </PreferenceCategory>
</PreferenceScreen>
