<!--
  ~ Copyright 2018 ACINQ SAS
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/home_intro"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/transparent"
  android:clickable="true"
  android:elevation="5dp">

  <LinearLayout
    android:id="@+id/home_intro_welcome"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_margin="32dp"
    android:background="@color/intro"
    android:elevation="6dp"
    android:orientation="vertical"
    android:padding="16dp"
    android:visibility="gone">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:text="@string/home_intro_welcome"
      android:textSize="20sp"
      android:textStyle="bold" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/home_intro_welcome_sub"
      android:textSize="12sp" />

  </LinearLayout>

  <LinearLayout
    android:id="@+id/home_intro_receive"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_centerVertical="true"
    android:layout_marginRight="64dp"
    android:background="@color/intro"
    android:elevation="6dp"
    android:orientation="vertical"
    android:padding="16dp"
    android:visibility="gone">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/home_intro_receive"
      android:textStyle="bold" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/home_intro_receive_sub"
      android:textSize="12sp" />
  </LinearLayout>

  <LinearLayout
    android:id="@+id/home_intro_openchannel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"
    android:layout_marginLeft="64dp"
    android:background="@color/intro"
    android:elevation="6dp"
    android:orientation="vertical"
    android:padding="16dp"
    android:visibility="gone">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/home_intro_openchannel"
      android:textStyle="bold" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/home_intro_openchannel_sub"
      android:textSize="12sp" />
  </LinearLayout>

  <LinearLayout
    android:id="@+id/home_intro_openchannel_patience"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"
    android:layout_marginLeft="64dp"
    android:background="@color/intro"
    android:elevation="6dp"
    android:orientation="vertical"
    android:padding="16dp"
    android:visibility="gone">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/home_intro_openchannel_patience"
      android:textStyle="bold" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/home_intro_openchannel_patience_sub"
      android:textSize="12sp" />

  </LinearLayout>

  <LinearLayout
    android:id="@+id/home_intro_sendpayment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_marginBottom="48dp"
    android:layout_marginLeft="64dp"
    android:layout_marginRight="48dp"
    android:background="@color/intro"
    android:elevation="6dp"
    android:gravity="end"
    android:orientation="vertical"
    android:padding="16dp"
    android:visibility="gone">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/home_intro_sendpayment"
      android:textAlignment="textEnd"
      android:textStyle="bold" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/home_intro_sendpayment_sub"
      android:textAlignment="textEnd"
      android:textSize="12sp" />
  </LinearLayout>
</RelativeLayout>
