<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 ACINQ SAS
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->


<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="fr.acinq.eclair.wallet.activities.BitcoinTransactionDetailsActivity">

  <data>

    <import type="android.view.View" />

    <variable
      name="isTxReceived"
      type="boolean" />

  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Custom toolbar -->
    <include layout="@layout/toolbar" />

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fillViewport="true"
      android:scrollbars="none">

      <LinearLayout style="@style/DataRowContainer">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="@dimen/space_md">

          <TextView
            style="@style/TitleCapsGrey"
            android:text="@{isTxReceived ? @string/transactiondetails_amount_received_label : @string/transactiondetails_amount_sent_label}" />

          <fr.acinq.eclair.wallet.customviews.CoinAmountView
            android:id="@+id/tx_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:alignment="left"
            app:amount_color="@color/grey_4"
            app:amount_size="36sp"
            app:force_btc="true"
            app:unit="mBTC"
            app:unit_color="@color/grey_4"
            app:unit_size="12sp" />

          <TextView
            android:id="@+id/amount_paid_fiat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/paymentdetails_amount_fiat" />

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:orientation="horizontal">

            <LinearLayout
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="0.5"
              android:orientation="vertical">

              <TextView
                style="@style/TitleCapsGrey"
                android:text="@string/transactiondetails_confs_label" />

              <TextView
                android:id="@+id/confs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="0.5"
              android:orientation="vertical"
              android:paddingStart="@dimen/space_xs"
              android:visibility="@{isTxReceived ? View.GONE : View.VISIBLE}">

              <TextView
                style="@style/TitleCapsGrey"
                android:text="@string/transactiondetails_fees_label" />

              <TextView
                android:id="@+id/fees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            </LinearLayout>
          </LinearLayout>
        </LinearLayout>

        <TextView
          style="@style/TitleBar"
          android:drawableStart="@drawable/ic_hammer_grey_14dp"
          android:text="@string/paymentdetails_technicals_title" />

        <fr.acinq.eclair.wallet.customviews.DataRow
          android:id="@+id/tx_id"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:action_label="@string/open_in_explorer"
          app:has_action="true"
          app:has_border="true"
          app:label="@string/transactiondetails_txid_label"
          app:value="@string/unknown" />

        <fr.acinq.eclair.wallet.customviews.DataRow
          android:id="@+id/confs_type"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:has_border="true"
          app:label="@string/transactiondetails_confs_type_label"
          app:value="@string/unknown" />

        <fr.acinq.eclair.wallet.customviews.DataRow
          android:id="@+id/rebroadcast"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:visibility="gone"
          app:action_label="@string/transactiondetails_rebroadcast"
          app:has_action="true"
          app:has_border="true"
          app:label="@string/transactiondetails_rebroadcast" />

        <fr.acinq.eclair.wallet.customviews.DataRow
          android:id="@+id/date"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:is_bottom_rounded="true"
          app:label="@string/transactiondetails_date_label"
          app:value="@string/unknown" />

      </LinearLayout>
    </ScrollView>
  </LinearLayout>
</layout>
