<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 ACINQ SAS
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="fr.acinq.eclair.wallet.utils.Constants" />

    <import type="android.view.View" />

    <variable
      name="importStep"
      type="int" />
  </data>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:fillViewport="true"
    android:theme="@style/PrimaryBgTheme"
    tools:context=".activities.ImportWalletActivity">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/space_lg">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="@{importStep == Constants.IMPORT_WALLET_STEP_INIT ? View.VISIBLE : View.GONE}">

        <TextView
          style="@style/TitleCapsIcon"
          android:layout_marginBottom="@dimen/space_sm"
          android:drawableStart="@drawable/ic_key_white_24dp"
          android:text="@string/importwallet_init_title" />

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/space_md"
          android:text="@string/importwallet_init_instructions" />

        <android.support.design.widget.TextInputLayout
          android:id="@+id/mnemonics_input_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="32dp"
          android:hint="@string/importwallet_input_hint"
          android:textColorHint="@color/primary_light_x3">

          <android.support.design.widget.TextInputEditText
            android:id="@+id/mnemonics_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_light_x3"
            android:digits="abcdefghijklmnopqrstuvwxyz "
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="12sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
          style="@style/EndButtonStyle"
          android:onClick="importMnemonics"
          android:text="@string/importwallet_next_button" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:visibility="@{importStep == Constants.IMPORT_WALLET_STEP_PASSPHRASE ? View.VISIBLE : View.GONE}">

        <TextView
          style="@style/TitleCapsIcon"
          android:layout_marginBottom="@dimen/space_sm"
          android:drawableStart="@drawable/ic_shield_white_24dp"
          android:text="@string/wallet_passphrase_title" />

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/space_md"
          android:text="@string/wallet_passphrase_instructions" />

        <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="32dp"
          android:hint="@string/wallet_passphrase_input_hint"
          android:textColorHint="@color/primary_light_x3">

          <android.support.design.widget.TextInputEditText
            android:id="@+id/passphrase_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_light_x3"
            android:digits="abcdefghijklmnopqrstuvwxyz "
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="12sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
          style="@style/EndButtonStyle"
          android:onClick="importPassphrase"
          android:text="@string/importwallet_next_button" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="@{importStep == Constants.IMPORT_WALLET_STEP_ENCRYPT ? View.VISIBLE : View.GONE}">

        <TextView
          style="@style/TitleCapsIcon"
          android:drawableStart="@drawable/ic_lock_white_24dp"
          android:text="@string/createwallet_encryption_title" />

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/createwallet_encryption_instructions"/>

        <Button
          style="@style/EndButtonStyle"
          android:onClick="encryptSeed"
          android:text="@string/createwallet_encryption_button" />
      </LinearLayout>

      <TextView
        style="@style/RoundedWhitePanelIcon"
        android:drawableStart="@drawable/ic_circle_check"
        android:text="@string/importwallet_success"
        android:visibility="@{importStep == Constants.IMPORT_WALLET_STEP_SUCCESS ? View.VISIBLE : View.GONE}" />

      <TextView
        android:id="@+id/import_error"
        style="@style/RoundedWhitePanelIcon"
        android:drawableStart="@drawable/ic_circle_cross_red_24dp"
        android:text="@string/importwallet_error"
        android:visibility="@{importStep == Constants.IMPORT_WALLET_STEP_ERROR ? View.VISIBLE : View.GONE}" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:visibility="@{importStep == Constants.IMPORT_WALLET_STEP_SUCCESS ? View.GONE : View.VISIBLE}">

        <TextView
          style="@style/ProgressIndicator"
          android:alpha="@{importStep == Constants.IMPORT_WALLET_STEP_INIT ? 1f : .3f}" />

        <TextView
          style="@style/ProgressIndicator"
          android:alpha="@{importStep == Constants.IMPORT_WALLET_STEP_PASSPHRASE ? 1f : .3f}" />

        <TextView
          style="@style/ProgressIndicator"
          android:alpha="@{importStep == Constants.IMPORT_WALLET_STEP_ENCRYPT ? 1f : .3f}" />

      </LinearLayout>

    </RelativeLayout>
  </ScrollView>

</layout>
